adiciona metodo de debito